apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: edonusum
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.ufukcetinkaya.net
    secretName: api-tls
  rules:
  - host: api.ufukcetinkaya.net
    http:
      paths:
      - path: /document
        pathType: Prefix
        backend:
          service:
            name: document-api
            port:
              number: 80
      - path: /EFaturaMerkez/services/EFatura
        pathType: Prefix
        backend:
          service:
            name: envelope-api
            port:
              number: 80
